# aoc22

./: .gitignore  README.md  aoc22.cabal  aoc22.sln  run-day.ps1
core/cs/: AoC22.Core.csproj  Days.cs  Program.cs  Solution.cs  Usings.cs
core/hs/: Main.hs
solutions/: AoC22.Solutions.csproj  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day06Alt.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day13.hs  Day14.hs  Day15.hs  Day17.hs  Days.hs  Usings.cs
utility/cs/: Extensions.cs  Solution.cs
utility/hs/: HashSetUtils.hs  ListUtils.hs  NumUtils.hs  Position.hs  RangeUtils.hs  Solution.hs  StateUtils.hs  StringUtils.hs
