cabal-version:      2.4
name:               aoc22
version:            0.1.0.0

author:             thinker227

library solutions
    exposed-modules:
        Day01

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    
    build-depends:
        base ^>=4.14.3.0,
        utility
    hs-source-dirs:   solutions
    default-language: Haskell2010

library utility
    exposed-modules:
	    Solution
        ListUtils
        StringUtils
        NumUtils

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   utility/hs
    default-language: Haskell2010

executable aoc22
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base ^>=4.14.3.0,
        containers,
        directory,
        solutions,
        utility

    hs-source-dirs:   core/hs
    default-language: Haskell2010
