cabal-version:      2.4
name:               aoc22
version:            0.1.0.0

author:             thinker227

library solutions
    exposed-modules:
        Days

    -- Modules included in this library but not exported.
    other-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day13
        Day14
        Day15

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    
    build-depends:
        base ^>=4.14.3.0,
        containers,
        mtl,
        utility
    hs-source-dirs:   solutions
    default-language: Haskell2010

library utility
    exposed-modules:
        Solution
        ListUtils
        StringUtils
        NumUtils
        Position
        StateUtils,
        RangeUtils

    build-depends:
        base ^>=4.14.3.0,
        containers,
        mtl
    hs-source-dirs:   utility/hs
    default-language: Haskell2010

executable aoc22
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base ^>=4.14.3.0,
        containers,
        directory,
        solutions,
        utility

    hs-source-dirs:   core/hs
    default-language: Haskell2010
